// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should handle SET_AUTH action 1`] = `
Object {
  "auth": true,
}
`;

exports[`reducer should handle UNSET_AUTH action 1`] = `
Object {
  "auth": false,
}
`;

exports[`reducer should return the initial state 1`] = `
Object {
  "auth": false,
}
`;
